// =====================================================================
// HealthTracker - Database Schema (Room / SQLite)
// Paste vào https://dbdiagram.io  (Import > DBML)
// ---------------------------------------------------------------------
// Ghi chu:
//  - App local 1 user. TDEE / BMR / BMI / tuoi => tinh runtime, KHONG luu.
//  - Settings (ngon ngu, theme, font, notification) => DataStore, khong nam trong SQL.
//  - Log entries luu snapshot ten + calo tai thoi diem ghi (lich su bat bien).
// =====================================================================

Enum gender {
  male   // Nam
  female // Nu
}

Enum goal {
  lose     // Giam can  -> TDEE - 500
  maintain // Giu can   -> TDEE
  gain     // Tang can  -> TDEE + 500
}

Enum meal_type {
  breakfast // Sang
  lunch     // Trua
  dinner    // Toi
  snack     // Bua phu
}

// ---------------------------------------------------------------------
// PROFILE
// ---------------------------------------------------------------------
Table users {
  id            integer   [pk, increment]
  full_name     varchar   [not null]
  date_of_birth date      [not null, note: 'Tuoi tinh runtime tu day']
  gender        gender    [not null]
  weight_kg     real      [not null]
  height_cm     real      [not null]
  activity_level integer  [not null, note: '1..5 -> he so 1.2 / 1.375 / 1.55 / 1.725 / 1.9']
  goal          goal      [not null]
  created_at    timestamp [default: `now()`]
  updated_at    timestamp [default: `now()`]

  note: 'BMR/TDEE/BMI deu derive tu cac truong nay, khong luu tinh toan'
}

// ---------------------------------------------------------------------
// CATALOG (seed san, cho phep user tu them)
// ---------------------------------------------------------------------
Table foods {
  id           integer [pk, increment]
  name         varchar [not null]
  calories     real    [not null, note: 'kcal / 1 khau phan chuan']
  serving_unit varchar [note: 'vd: 100g, 1 to, 1 qua, 1 o banh mi']

  indexes {
    name [note: 'search mon an theo ten']
  }
  note: 'Seed toi thieu 30 mon. Mon user tu nhap se duoc INSERT thang vao day, khong con phan biet seed vs custom'
}

Table activities {
  id   integer [pk, increment]
  name varchar [not null]
  met  real    [not null, note: 'MET: di bo 3.5, chay 9.8, dap xe 7.5, boi 8.0...']

  note: 'Seed toi thieu 15 loai hoat dong. Hoat dong user tu nhap se duoc INSERT thang vao day'
}

// ---------------------------------------------------------------------
// LOG (nhat ky)
// ---------------------------------------------------------------------
Table meal_entries {
  id         integer   [pk, increment]
  food_id    integer   [not null, note: 'luon tro toi 1 row trong foods. Neu user tu nhap, INSERT vao foods truoc roi moi lay id nay']
  log_date   date      [not null]
  meal_type  meal_type [not null]
  food_name  varchar   [not null, note: 'snapshot ten mon luc log, phong khi user sua ten trong catalog sau nay']
  quantity   real      [not null, default: 1, note: 'so khau phan']
  calories   real      [not null, note: 'snapshot = food.calories * quantity']
  created_at timestamp [default: `now()`]

  indexes {
    log_date
    (log_date, meal_type)
  }

  note: 'App chi co 1 user duy nhat (row users.id = 1), khong can user_id o day'
}

Table activity_entries {
  id               integer   [pk, increment]
  activity_id      integer   [not null, note: 'luon tro toi 1 row trong activities. Neu user tu nhap, INSERT vao activities truoc roi moi lay id nay']
  log_date         date      [not null]
  activity_name    varchar   [not null, note: 'snapshot ten hoat dong luc log, phong khi user sua ten trong catalog sau nay']
  duration_minutes integer   [not null]
  calories_burned  real      [not null, note: 'snapshot = met * user.weight_kg * (duration_minutes / 60)']
  created_at       timestamp [default: `now()`]

  indexes {
    log_date
  }
}

// ---------------------------------------------------------------------
// RELATIONSHIPS
// ---------------------------------------------------------------------
Ref: meal_entries.food_id         > foods.id      [delete: restrict]  // khong cho xoa food dang duoc entry nao tro toi
Ref: activity_entries.activity_id > activities.id [delete: restrict]
